--- a/example/index.html
+++ b/example/index.html
@@ -19,20 +19,20 @@
 
 <body>
 
-<h1>Sweet Alert</h1>
-<h2>A beautiful replacement for Javascript's "Alert"</h2>
-<button class="download">Download</button>
+<h1>Sweet Modal</h1>
+<h2>A customisable modal replacement for Javascript's "Alert"</h2>
+<h2>Based on Sweet Alert by Tristan Edwards</h2>
 
 <!-- What does it do? -->
 <h3>So... What does it do?</h3>
-<p>Here’s a comparison of a standard error message. The first one uses the built-in <strong>alert</strong>-function, while the second is using <strong>sweetAlert</strong>.</p>
+<p>Here’s a comparison of a standard error message. The first one uses the built-in <strong>alert</strong>-function, while the second is using <strong>sweetModal</strong>.</p>
 
 <div class="showcase normal">
-	<h4>Normal alert</h4>
-	<button>Show error message</button>
+	<h4>Normal "alert"</h4>
+	<button>Show welcome message</button>
 
 	<h5>Code:</h5>
-	<pre><span class="func">alert</span>(<span class="str">"Oops... Something went wrong!"</span>);
+	<pre><span class="func">alert</span>(<span class="str">"Sample Welcome Message Title: Lorem ipsum dolor sit amet, consectetur..."</span>);
 
 	</pre>
 
@@ -44,146 +44,17 @@
 	<button>Show error message</button>
 
 	<h5>Code:</h5>
-	<pre>sweetAlert(<span class="str">"Oops..."</span>, <span class="str">"Something went wrong!"</span>, <span class="str">"error"</span>);</pre>
+	<pre>
+	<span class="func">swmo</span>({
+		title:<span class="str">"Sample Welcome Message Title:"</span>,
+		text: <span class="str">"Lorem ipsum dolor sit..."</span>,
+		imageUrl: <span class="str">'images/Custom_Modal_Picture.png'</span>,
+		div_class: <span class="str">"custom_className_fromCSS"</span>
+	});
+	</pre>
 </div>
 
 <p>Pretty cool huh? SweetAlert automatically centers itself on the page and looks great no matter if you're using a desktop computer, mobile or tablet. It's even highly customizeable, as you can see below!</p>
-
-
-<!-- Examples -->
-<h3>More examples</h3>
-
-<p class="center">In these examples, we're using the shorthand function <strong>swal</strong> to call sweetAlert.</p>
-
-<ul class="examples">
-
-	<li class="message">
-		<div class="ui">
-			<p>A basic message</p>
-			<button>Try me!</button>
-		</div>
-		<pre>swal(<span class="str">"Here's a message!"</span>)</pre>
-	</li>
-
-	<li class="title-text">
-		<div class="ui">
-			<p>A title with a text under</p>
-			<button>Try me!</button>
-		</div>
-		<pre>swal(<span class="str">"Here's a message!"</span>, <span class="str">"It's pretty, isn't it?"</span>)</pre>
-	</li>
-
-	<li class="success">
-		<div class="ui">
-			<p>A success message!</p>
-			<button>Try me!</button>
-		</div>
-		<pre>swal(<span class="str">"Good job!"</span>, <span class="str">"You clicked the button!"</span>, <span class="str">"success"</span>)</pre>
-	</li>
-
-	<li class="timer">
-		<div class="ui">
-			<p>A message with auto close timer</p>
-			<button>Try me!</button>
-		</div>
-		<pre>swal({
-&nbsp;&nbsp;title: <span class="str">"Auto close alert!"</span>,
-&nbsp;&nbsp;text: <span class="str">"I will close in 2 seconds."</span>,
-&nbsp;&nbsp;timer: <span class="str">2000</span>
-});</pre>
-	</li>
-
-	<li class="warning confirm">
-		<div class="ui">
-			<p>A warning message, with a function attached to the "Confirm"-button...</p>
-			<button>Try me!</button>
-		</div>
-		<pre>swal({
-&nbsp;&nbsp;title: <span class="str">"Are you sure?"</span>,
-&nbsp;&nbsp;text: <span class="str">"You will not be able to recover this imaginary file!"</span>,
-&nbsp;&nbsp;type: <span class="str">"warning"</span>,
-&nbsp;&nbsp;showCancelButton: <span class="val">true</span>,
-&nbsp;&nbsp;confirmButtonColor: <span class="str">"#DD6B55"</span>,
-&nbsp;&nbsp;confirmButtonText: <span class="str">"Yes, delete it!"</span>,
-&nbsp;&nbsp;closeOnConfirm: <span class="val">false</span>
-},
-<span class="func"><i>function</i></span>(){
-&nbsp;&nbsp;<span class="func">swal</span>(<span class="str">"Deleted!"</span>, <span class="str">"Your imaginary file has been deleted."</span>, <span class="str">"success"</span>);
-});</pre>
-	</li>
-
-	<li class="warning cancel">
-		<div class="ui">
-			<p>... and by passing a parameter, you can execute something else for "Cancel".</p>
-			<button>Try me!</button>
-		</div>
-		<pre>swal({
-&nbsp;&nbsp;title: <span class="str">"Are you sure?"</span>,
-&nbsp;&nbsp;text: <span class="str">"You will not be able to recover this imaginary file!"</span>,
-&nbsp;&nbsp;type: <span class="str">"warning"</span>,
-&nbsp;&nbsp;showCancelButton: <span class="val">true</span>,
-&nbsp;&nbsp;confirmButtonColor: <span class="str">"#DD6B55"</span>,
-&nbsp;&nbsp;confirmButtonText: <span class="str">"Yes, delete it!"</span>,
-&nbsp;&nbsp;cancelButtonText: <span class="str">"No, cancel plx!"</span>,
-&nbsp;&nbsp;closeOnConfirm: <span class="val">false</span>,
-&nbsp;&nbsp;closeOnCancel: <span class="val">false</span>
-},
-<span class="func"><i>function</i></span>(isConfirm){
-&nbsp;&nbsp;<span class="tag">if</span> (isConfirm) {
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="func">swal</span>(<span class="str">"Deleted!"</span>, <span class="str">"Your imaginary file has been deleted."</span>, <span class="str">"success"</span>);
-&nbsp;&nbsp;} <span class="tag">else</span> {
-	&nbsp;&nbsp;&nbsp;&nbsp;<span class="func">swal</span>(<span class="str">"Cancelled"</span>, <span class="str">"Your imaginary file is safe :)"</span>, <span class="str">"error"</span>);
-&nbsp;&nbsp;}
-});</pre>
-	</li>
-
-	<li class="custom-icon">
-		<div class="ui">
-			<p>A message with a custom icon</p>
-			<button>Try me!</button>
-		</div>
-		<pre>swal({
-&nbsp;&nbsp;title: <span class="str">"Sweet!"</span>,
-&nbsp;&nbsp;text: <span class="str">"Here's a custom image."</span>,
-&nbsp;&nbsp;imageUrl: <span class="str">"images/thumbs-up.jpg"</span>
-});</pre>
-	</li>
-
-</ul>
-
-
-<!-- Download & Install -->
-<h3 id="download-section">Download & install</h3>
-
-<div class="center-container">
-	<p class="center"><b>Method 1:</b> Install through bower:</p>
-	<pre class="center">$ bower install sweetalert</pre>
-</div>
-
-<p class="center"><b>Method 2:</b> Download the sweetAlert <strong>CSS</strong> and <strong>JavaScript</strong> files.</p>
-
-<a class="button" href="https://github.com/t4t5/sweetalert/archive/master.zip" download>Download files</a>
-
-<ol>
-	<li>
-		<p>Initialize the plugin by referencing the necessary files:</p>
-		<pre>&lt;<span class="tag">script</span> <span class="attr">src</span>=<span class="str">"lib/sweet-alert.min.js"</span>&gt;&lt;/<span class="tag">script</span>&gt;
-&lt;<span class="tag">link</span> <span class="attr">rel</span>=<span class="str">"stylesheet"</span> <span class="tag">type</span>=<span class="str">"text/css"</span> <span class="tag">href</span>=<span class="str">"lib/sweet-alert.css"</span>&gt;</pre>
-	</li>
-
-	<li>
-		<p>Call the sweetAlert-function after the page has loaded</p>
-		<pre>swal({
-&nbsp;&nbsp;title: <span class="str">"Error!"</span>,
-&nbsp;&nbsp;text: <span class="str">"Here's my error message!"</span>,
-&nbsp;&nbsp;type: <span class="str">"error"</span>,
-&nbsp;&nbsp;confirmButtonText: <span class="str">"Cool"</span>
-});
-</pre>
-	</li>
-</ol>
-
-
 
 <!-- Configuration -->
 <h3>Configuration</h3>
@@ -262,102 +133,35 @@
 		<td><i>null</i></td>
 		<td>Auto close timer of the modal. Set in ms (milliseconds).</td>
 	</tr>
+	<tr>
+		<td><b>div_class</b></td>
+		<td><i>" "</i></td>
+		<td>Set this parameter to any css class name to change the modal's css.</td>
+	</tr>
 </table>
-
 
 <!-- Contribute -->
 <h3>Contribute</h3>
+<p>SweetModal is a fork of <a href="https://github.com/t4t5/sweetalert" target="_blank">SweetAlert</a> created by <a href="https://github.com/JulienLaclaverie" target="_blank">Julien Laclaverie</a>.</p>
 <p>SweetAlert was created by <a href="http://tristanedwards.me" target="_blank">Tristan Edwards</a>, you can follow him on <a href="https://twitter.com/t4t5" target="_blank" class="twitter">Twitter</a> or <a href="https://dribbble.com/tristanedwards" target="_blank" class="dribbble">Dribbble</a> for updates and other cool projects!</p>
 <p>Feel free to fork sweetAlert on <a href="https://github.com/t4t5/sweetalert" class="github">GitHub</a> if you have any features that you want to add!</p>
 
-
-<footer>
-	<span class="te-logo">TE</span> • 2014
-</footer>
-
-
 <script>
 
-document.querySelector('button.download').onclick = function(){
-	$("html, body").animate({ scrollTop: $("#download-section").offset().top }, 1000);
-};
-
 document.querySelector('.showcase.normal button').onclick = function(){
-	alert("Oops... Something went wrong!");
+	alert("Sample Welcome Message Title: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.");
 };
 
 document.querySelector('.showcase.sweet button').onclick = function(){
-	swal("Oops...", "Something went wrong!", "error");
-};
-
-document.querySelector('ul.examples li.message button').onclick = function(){
-	swal("Here's a message!");
-};
-
-document.querySelector('ul.examples li.timer button').onclick = function(){
 	swal({
-		title: "Auto close alert!",
-		text: "I will close in 2 seconds.",
-		timer: 2000
-	});
-};
-
-document.querySelector('ul.examples li.title-text button').onclick = function(){
-	swal("Here's a message!", "It's pretty, isn't it?")
-};
-
-document.querySelector('ul.examples li.success button').onclick = function(){
-	swal("Good job!", "You clicked the button!", "success");
-};
-
-document.querySelector('ul.examples li.warning.confirm button').onclick = function(){
-	swal({
-		title: "Are you sure?",
-		text: "You will not be able to recover this imaginary file!",
-		type: "warning",
-		showCancelButton: true,
-		confirmButtonColor: '#DD6B55',
-		confirmButtonText: 'Yes, delete it!',
-		closeOnConfirm: false,
-		//closeOnCancel: false
-	},
-	function(){
-		swal("Deleted!", "Your imaginary file has been deleted!", "success");
-	});
-};
-
-document.querySelector('ul.examples li.warning.cancel button').onclick = function(){
-	swal({
-		title: "Are you sure?",
-		text: "You will not be able to recover this imaginary file!",
-		type: "warning",
-		showCancelButton: true,
-		confirmButtonColor: '#DD6B55',
-		confirmButtonText: 'Yes, delete it!',
-		cancelButtonText: "No, cancel plx!",
-		closeOnConfirm: false,
-		closeOnCancel: false
-	},
-	function(isConfirm){
-    if (isConfirm){
-      swal("Deleted!", "Your imaginary file has been deleted!", "success");
-    } else {
-      swal("Cancelled", "Your imaginary file is safe :)", "error");
-    }
-	});
-};
-
-document.querySelector('ul.examples li.custom-icon button').onclick = function(){
-	swal({
-		title: "Sweet!",
-		text: "Here's a custom image.",
-		imageUrl: 'images/thumbs-up.jpg'
+		title: "Sample Welcome Message Title:",
+		text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+		imageUrl: 'images/logo_big.png',
+		div_class: "vroom_modale"
 	});
 };
 
 </script>
-
-
 
 </body>
 
