--- a/example/index.html
+++ b/example/index.html
@@ -6,13 +6,13 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-  <title>SweetAlert</title>
+  <title>SweetModal</title>
 
   <link rel="stylesheet" href="./example.css">
 
   <!-- This is what you need -->
-  <script src="../lib/sweet-alert.js"></script>
-  <link rel="stylesheet" href="../lib/sweet-alert.css">
+  <script src="../lib/sweet-modal.js"></script>
+  <link rel="stylesheet" href="../lib/sweet-modal.css">
   <!--.......................-->
 
 </head>
@@ -25,7 +25,7 @@
 
 <!-- What does it do? -->
 <h3>So... What does it do?</h3>
-<p>Here’s a comparison of a standard error message. The first one uses the built-in <strong>alert</strong>-function, while the second is using <strong>sweetModal</strong>.</p>
+<p>Here’s a comparison between two welcome messages. The first one uses the built-in <strong>alert</strong>-function, while the second is using <strong>sweetModal</strong>.</p>
 
 <div class="showcase normal">
 	<h4>Normal "alert"</h4>
@@ -54,7 +54,7 @@
 	</pre>
 </div>
 
-<p>Pretty cool huh? SweetAlert automatically centers itself on the page and looks great no matter if you're using a desktop computer, mobile or tablet. It's even highly customizeable, as you can see below!</p>
+<p>SweetModal displays a modal which reacts like SweetAlert but is more customizable because you can use a css class as a parameter ! (details below...)</p>
 
 <!-- Configuration -->
 <h3>Configuration</h3>
@@ -153,7 +153,7 @@ document.querySelector('.showcase.normal button').onclick = function(){
 };
 
 document.querySelector('.showcase.sweet button').onclick = function(){
-	swal({
+	swmo({
 		title: "Sample Welcome Message Title:",
 		text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
 		imageUrl: 'images/logo_big.png',
